# Firmware-Development-Intern-Marshee-Pet-Tech

./: BLE Server.ino  Distance estimation.ino  README.md  Sample code.ino  sample_code.c
ESP_IDF/: Setup.md
gatt_server/: .cproject  .project  Gatt_Server_Example_Walkthrough.md  gatts_demo.c  sdkconfig
https_ota/: CMakeLists.txt  README.md  sdkconfig
https_ota/cert/: cert.c  cert.pem  cert2c.py  key.pem
https_ota/main/: CMakeLists.txt  https_ota.c
https_ota/main/ble_helper/: bluedroid_gatts.c
https_ota/main/ble_helper/include/: ble_api.h
https_ota/server/: https.server.py
